# http-c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  diff.gitpatch
.devcontainer/: Dockerfile  run-tests.sh
.github/workflows/: ci-linux.yml
benchmarks/: CMakeLists.txt  REPORT.md  mongoose_bench.c  run_bench.sh  sample_bench.c
docs/: api-review-lwip-http.md  api-review-mongoose.md  design_review_202604251726PDT.md  media_streaming.md
inc/: common.h  http_codes.h  http_connection.h  http_endpoint.h  http_headers.h  http_listener.h  http_methods.h  http_query.h  http_request.h  http_request_parser.h  http_response.h  http_server.h  http_server_storage.h  http_versions.h  ssl.h
samples/: CMakeLists.txt  README.md  main.c
samples/media_streaming/: CMakeLists.txt  README.md  cleanup.cmd  launch_with_docker.cmd  main.c
samples/media_streaming/docker/: Dockerfile  entrypoint.sh
samples/media_streaming/media/: .gitignore
samples/media_streaming/web/: index.html  script.js  style.css
samples/scripts/: generate_certs.sh
samples/server_client/: CMakeLists.txt  README.md  main.c
samples/streaming/: CMakeLists.txt  README.md  main.c
scripts/: run-coverage.sh
src/: http_connection.c  http_endpoint.c  http_headers.c  http_listener.c  http_query.c  http_request.c  http_request_parser.c  http_response.c  http_server.c  http_server_storage_for_microcontroller.c  http_server_storage_for_server_host.c  ssl.c
tests/: CMakeLists.txt  main.c  test_http.h  test_http_endpoint.c  test_http_headers.c  test_http_query.c  test_http_request.c  test_http_request_parser.c  test_http_response.c  test_http_server.c  test_http_server_storage.c
tests/scripts/: .gitignore  test_setup.sh
tests/shared_link/: CMakeLists.txt  consumer.c
